# juce-plugin-example

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  project-config.json  project-config.schema.json  test_base64.cpp
.codex/: config.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-reproducible-product-shell/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-end-to-end-vst3-analyzer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HOST-SMOKE.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-standalone-windows-monitoring/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md
.planning/phases/04-portable-purchase-infrastructure/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md
.planning/phases/05-one-machine-activation-service/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md
.planning/phases/06-native-offline-licensing/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-UAT.md  06-UI-SPEC.md  06-VALIDATION.md
.planning/phases/06.5-project-configuration-centralization/: 06.5-01-PLAN.md  06.5-01-SUMMARY.md  06.5-02-PLAN.md  06.5-02-SUMMARY.md  06.5-03-PLAN.md  06.5-03-SUMMARY.md  06.5-CONTEXT.md  06.5-HARDCODED-INVENTORY.md  06.5-RESEARCH.md  06.5-VALIDATION.md
.planning/quick/20260624-deployment-documentation/: 260624-dep-SUMMARY.md  PLAN.md
.planning/quick/20260627-project-health-check/: 20260627-health-check-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: CPM.cmake  Config.cmake  Dependencies.cmake  WebBundle.cmake
cmake/templates/: ConfigValidation.cmake  ProjectConfig.h.in  config.ps1.in
docs/: CONFIG-REFERENCE.md  activation-api.md  analyzer-dsp.md  bridge-protocol.md  cloud-infrastructure.md  deployment.md  development.md  troubleshooting.md  vst3-smoke-test.md
docs/standalone/: device-test-matrix.md  diagnostics.md  source-preference-setup.md  startup-guide.md
infra/: bootstrap.ps1  common.ps1  deploy.ps1  generated-state.schema.json  manifest.yaml  teardown.ps1  verify.ps1
plugin/: CMakeLists.txt
plugin/include/LumaScope/: HostBridge.h  PluginEditor.h  PluginProcessor.h  SnapshotMailbox.h  WebResources.h
plugin/include/LumaScope/Analyzer/: AnalyzerConfig.h  SpectrumAnalyzer.h  SpectrumSnapshot.h
plugin/include/LumaScope/Licensing/: ActivationClient.h  BuiltinPublicKeyRing.h  EntitlementToken.h  GraceModel.h  LicensingCore.h  LicensingEventIds.h  LicensingState.h  LocalEntitlementStore.h  MachineIdentity.h  PublicKeyRing.h  TokenVerifier.h
plugin/include/LumaScope/Standalone/: SourceModel.h  SourcePreferenceStore.h  StandaloneSourceController.h  WasapiDeviceNotifications.h  WasapiLoopbackSourceAdapter.h
plugin/source/: HostBridge.cpp  PluginEditor.cpp  PluginProcessor.cpp  WebResources.cpp
plugin/source/Analyzer/: AnalyzerConfig.cpp  SpectrumAnalyzer.cpp
plugin/source/Licensing/: ActivationClient.cpp  EntitlementToken.cpp  GraceModel.cpp  LicensingCore.cpp  LicensingState.cpp  LocalEntitlementStore.cpp  MachineIdentity.cpp  PublicKeyRing.cpp  TokenVerifier.cpp
plugin/source/Licensing/tweetnacl/: tweetnacl.c  tweetnacl.h
plugin/source/Standalone/: SourcePreferenceStore.cpp  StandaloneSourceController.cpp
plugin/source/Standalone/windows/: WasapiDeviceNotifications.cpp  WasapiEndpointEnumerator.cpp  WasapiLoopbackSourceAdapter.cpp
scripts/: New-DeterministicZip.ps1  bootstrap.ps1  check-environment.ps1  config.ps1  generate-all-config.mjs  generate-config-ts.mjs  start-lumascope-standalone.ps1  test-all.ps1  test-quick.ps1  test-web-modes.ps1  validate-config.mjs  validate-plugin.ps1  verify-project.ps1
tests/fixtures/bridge/: host-info-v1.json  malformed.json  spectrum-snapshot-v1.json  ui-ready-v1.json  unsupported-version.json
tests/fixtures/web/: app.js  index.html
tests/native/: AudioConversionTests.cpp  CMakeLists.txt  EditorSnapshotPollingTests.cpp  HostBridgeTests.cpp  PluginProcessorTests.cpp  RealtimeHandoffTests.cpp  SmokeTests.cpp  SourcePreferenceStoreTests.cpp  SpectrumAnalyzerTests.cpp  StandaloneSourceControllerTests.cpp  WasapiEndpointModelTests.cpp  WebResourcesTests.cpp
tests/native/Licensing/: ActivationClientTests.cpp  CMakeLists.txt  EntitlementTokenTests.cpp  GraceModelTests.cpp  LicensingCoreTests.cpp  LocalEntitlementStoreTests.cpp  MachineIdentityTests.cpp  TokenVerifierTests.cpp
tests/native/fixtures/: public-key-ring.json
tests/worker/: abuse.test.ts  activation-routes.test.ts  contracts.test.ts  repository.test.ts  setup.ts  signing.test.ts  webhook.test.ts
tests/worker/fixtures/: entitlement-v1.json  lemon-webhook-invalid-signature.json  lemon-webhook-unsupported-event.json  lemon-webhook-valid.json
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/scripts/: check-bundle.mjs
ui/src/: App.test.tsx  App.tsx  main.tsx
ui/src/app/: AppShell.tsx  theme.ts
ui/src/bridge/: BridgeProvider.test.tsx  BridgeProvider.tsx  SourceProtocol.test.ts  SpectrumSnapshot.test.ts  protocol.ts
ui/src/components/: ActivationDialog.tsx  ActivationStatus.tsx  AnalyzerStage.test.tsx  AnalyzerStage.tsx  (+9 more)
worker/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/src/: env.ts  index.ts  routes.ts  webhook.ts
(+20 files in other folders)
